# skypp

./: .coverage  .gitignore  pyproject.toml  readme.md
src/: main.py
tests/: test_main.py
