[tool.poetry]
name = "skypp"
version = "0.1.0"
description = ""
authors = ["wrluu <fikbookmy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
coverage = "^7.8.0"
pytest = "^8.3.5"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
